# src/api/swagger.json
@@ -1,382 +1,126 @@
 {
-    "swagger": "2.0",
-    "host": "localhost:3000",
-    "info": {
-      "title": "",
-      "description": "",
-      "version": ""
+  "swagger": "2.0",
+  "host": "localhost:3000",
+  "info": {
+    "title": "",
+    "description": "",
+    "version": ""
+  },
+  "basePath": "/api",
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
+  "schemes": [
+    "http"
+  ],
+  "securityDefinitions": {
+    "JWT": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "Authorization"
+    }
+  },
+  "tags": [
+    {
+      "name": "Info"
     },
-    "basePath": "/api",
-    "consumes": [
-      "application/json"
-    ],
-    "produces": [
-      "application/json"
-    ],
-    "schemes": [
-      "http"
-    ],
-    "securityDefinitions": {
-      "JWT": {
-        "type": "apiKey",
-        "in": "header",
-        "name": "Authorization"
-      }
-    },
-    "tags": [
-      {
-        "name": "Info"
-      },
-      {
-        "name": "User"
-      }
-    ],
-    "paths": {
-      "/info": {
-        "get": {
-          "tags": [
-            "Info"
-          ],
-          "summary": "Show API information",
-          "description": "This is a public route",
-          "operationId": "showApiInfo",
-          "responses": {
-            "200": {
-              "description": "ok"
-            }
-          }
-        }
-      },
-      "/users": {
-        "get": {
-          "tags": [
-            "User"
-          ],
-          "summary": "List all users",
-          "description": "Returns all users",
-          "operationId": "FindAllUsers",
-          "security": [
-            {
-              "JWT": []
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "ok",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "success": {
-                    "type": "boolean"
-                  },
-                  "message": {
-                    "type": "string"
-                  },
-                  "data": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/definitions/User"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "post": {
-          "tags": [
-            "User"
-          ],
-          "summary": "Create new user",
-          "description": "",
-          "operationId": "CreateUser",
-          "security": [
-            {
-              "JWT": []
-            }
-          ],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "User object that needs to be added to the database",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/NewUser"
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "created",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "success": {
-                    "type": "boolean"
-                  },
-                  "message": {
-                    "type": "string"
-                  },
-                  "data": {
-                    "$ref": "#/definitions/User"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "/mortage": {
-        "get": {
-          "tags": [
-            "Mortage"
-          ],
-          "parameters": [
-            {
-              "name": "TotalLoan",
-              "in": "query",
-              "description": "Total ammount of loan in euros",
-              "required": true,
-              "type": "integer",
-              "format": "int64"
-            },
-            {
-              "name": "Interest",
-              "in": "query",
-              "description": "Interest in percents",
-              "type": "integer",
-              "format": "int64",
-              "required": true
-            },
-            {
-              "name": "NumberOfMonths",
-              "in": "query",
-              "description": "Duration of the loan in months",
-              "type": "integer",
-              "format": "int64",
-              "required": true
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "ok",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "success": {
-                    "type": "boolean"
-                  },
-                  "message": {
-                    "type": "string"
-                  },
-                  "data": {
-                    "$ref": "#/definitions/MortageDataPoints"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "/users/{id}": {
-        "get": {
-          "tags": [
-            "User"
-          ],
-          "summary": "Get user",
-          "description": "Returns the given user",
-          "operationId": "FindUser",
-          "security": [
-            {
-              "JWT": []
-            }
-          ],
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "description": "ID of user to return",
-              "required": true,
-              "type": "integer",
-              "format": "int64"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "ok",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "success": {
-                    "type": "boolean"
-                  },
-                  "message": {
-                    "type": "string"
-                  },
-                  "data": {
-                    "$ref": "#/definitions/User"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "put": {
-          "tags": [
-            "User"
-          ],
-          "summary": "Update user",
-          "description": "Updates the given user",
-          "operationId": "UpdateUser",
-          "security": [
-            {
-              "JWT": []
-            }
-          ],
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "description": "ID of user to delete",
-              "required": true,
-              "type": "integer",
-              "format": "int64"
-            },
-            {
-              "in": "body",
-              "name": "body",
-              "description": "User object that needs to be added to the database",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/NewUser"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "ok",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "success": {
-                    "type": "boolean"
-                  },
-                  "message": {
-                    "type": "string"
-                  },
-                  "data": {
-                    "$ref": "#/definitions/User"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "delete": {
-          "tags": [
-            "User"
-          ],
-          "summary": "Delete user",
-          "description": "Removes the given user",
-          "operationId": "DeleteUser",
-          "security": [
-            {
-              "JWT": []
-            }
-          ],
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "description": "ID of user to delete",
-              "required": true,
-              "type": "integer",
-              "format": "int64"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "ok",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "success": {
-                    "type": "boolean"
-                  },
-                  "message": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
+    {
+      "name": "User"
+    }
+  ],
+  "paths": {
+    "/info": {
+      "get": {
+        "tags": [
+          "Info"
+        ],
+        "summary": "Show API information",
+        "description": "This is a public route",
+        "operationId": "showApiInfo",
+        "responses": {
+          "200": {
+            "description": "ok"
           }
         }
       }
     },
-    "definitions": {
-      "MortageDataPoint": {
-        "type": "object",
-        "properties": {
-          "MonthIndex": {
-            "type": "integer"
-          },
-          "LoanDeduction": {
-            "type": "integer"
-          },
-          "Interest": {
-            "type": "integer"
-          }
-        }
-      },
-      "MortageDataPoints": {
-        "title": "MortageDataPoints",
-        "type": "array",
-        "items": {
-          "$ref": "#/definitions/MortageDataPoint"
-        }
-      },
-      "NewUser": {
-        "type": "object",
-        "properties": {
-          "firstName": {
-            "type": "string"
-          },
-          "lastName": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "picture": {
-            "type": "string"
-          }
-        }
-      },
-      "User": {
-        "title": "User",
-        "allOf": [
+    "/mortage": {
+      "get": {
+        "tags": [
+          "Mortage"
+        ],
+        "parameters": [
           {
-            "$ref": "#/definitions/NewUser"
+            "name": "TotalLoan",
+            "in": "query",
+            "description": "Total amount of loan in euros",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
           },
           {
-            "type": "object",
-            "properties": {
-              "id": {
-                "type": "integer",
-                "format": "int64"
-              },
-              "updatedAt": {
-                "type": "string",
-                "format": "date-time"
-              },
-              "createdAt": {
-                "type": "string",
-                "format": "date-time"
+            "name": "Interest",
+            "in": "query",
+            "description": "Interest in percents",
+            "type": "integer",
+            "format": "int64",
+            "required": true
+          },
+          {
+            "name": "NumberOfMonths",
+            "in": "query",
+            "description": "Duration of the loan in months",
+            "type": "integer",
+            "format": "int64",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "$ref": "#/definitions/MortageDataPoints"
+                }
               }
             }
           }
-        ]
+        }
+      }
+    }
+  },
+  "definitions": {
+    "MortageDataPoint": {
+      "type": "object",
+      "properties": {
+        "MonthIndex": {
+          "type": "integer"
+        },
+        "LoanDeduction": {
+          "type": "integer"
+        },
+        "Interest": {
+          "type": "integer"
+        }
+      }
+    },
+    "MortageDataPoints": {
+      "title": "MortageDataPoints",
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/MortageDataPoint"
       }
     }
   }
+}
